modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -1492,6 +1492,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -1501,7 +1502,126 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Position and Declaration of a Method with Variable Arguments"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "A Method, that has a variable number of its arguments, can also have other parameters in its parameters list.   \n",
+    "   \n",
+    "The following code, for example, has as a first parameter an element of type `string`, and right after it there can be one or more parameters of type `int`:   \n",
+    "\n",
+    "```c#\n",
+    "static void DoSomething(string strParam, params int[] x) \n",
+    "{ \n",
+    "    // do something...\n",
+    "}\n",
+    "```   \n",
+    "\n",
+    "The one thing that we must consider is that the element from the parameters list in the Method’s definition, that allows passing of a variable number of arguments, **must always be placed at the end of the parameters list**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Limitations on the Count for the Variable Arguments"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Another limitation for the Methods with **variable number of arguments**, is that the Method *cannot* have in its declaration more than one parameter that allows passing of variable numbers of arguments. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(1,25): error CS0231: A params parameter must be the last parameter in a parameter list",
+     "output_type": "error",
+     "traceback": [
+      "(1,25): error CS0231: A params parameter must be the last parameter in a parameter list"
+     ]
+    }
+   ],
+   "source": [
+    "static void DoSomething(params int[] x, params string[] z) \n",
+    "{ \n",
+    "    // do something...\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
