--- a/9. Methods/Declaration/Parameters.ipynb
+++ b/9. Methods/Declaration/Parameters.ipynb
@@ -420,7 +420,9 @@
     "static void PrintMax( int parameter1, int parameter2 )\n",
     "{\n",
     "\n",
-    "    Console.WriteLine( $\"Max Number: {( (parameter1 > parameter2) ? parameter1 : parameter2 )}\" );\n",
+    "    Console.WriteLine( \n",
+    "        $\"Max Number: {( (parameter1 > parameter2) ? parameter1 : parameter2 )}\" \n",
+    "    );\n",
     "    \n",
     "}"
    ]
