modified:   9. Methods/Declaration/Parameters.ipynb

--- a/9. Methods/Declaration/Parameters.ipynb
+++ b/9. Methods/Declaration/Parameters.ipynb
@@ -708,6 +708,327 @@
    "source": [
     "MethodWithDefaultParameters( 119, \"george\" )"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Method Overloading"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When Method is declared, and its name coincides with the name of another Method, but their *signatures* differ by their **parameters list** (count of the method’s parameters or the way they are arranged), we say that there are different **variations** / **overloads** of that Method."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Say we wanted to come up with a Method that just prints out what type of Argument it received.   \n",
+    "    \n",
+    "You might think that we would need to come up with a *different Method* for each Argument type:\n",
+    "```c#\n",
+    "\n",
+    "static void PrintString(string StringArgument) \n",
+    "{\n",
+    "    Console.WriteLine($\"The String Argument is: {StringArgument}\");\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "static void PrintInt(int IntegerArgument) \n",
+    "{\n",
+    "    Console.WriteLine($\"The Integer Argument is: {IntegerArgument}\");\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "static void PrintFloat(float FloatArgument) \n",
+    "{\n",
+    "    Console.WriteLine($\"The Float Argument is: {FloatArgument}\");\n",
+    "}\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Clearly, this approach sucks hard.   \n",
+    "Thankfully, **Method Overbloading** offers a better solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Declare the Method so that it accepts a String Argument\n",
+    "static void PrintArgument(string StringArgument) \n",
+    "{\n",
+    "\n",
+    "    // Provide an implementation specific to the String Argument\n",
+    "    Console.WriteLine($\"The String Argument is: {StringArgument}\");\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Overload the Method such that it may alternatively receive an Integer Argument\n",
+    "static void PrintArgument(int IntegerArgument) \n",
+    "{\n",
+    "\n",
+    "    // Provide an implementation specific to the Integer Argument\n",
+    "    Console.WriteLine($\"The Integer Argument is: {IntegerArgument}\");\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Overload the Method such that it may alternatively receive a Float Argument\n",
+    "static void PrintArgument(float FloatArgument) \n",
+    "{\n",
+    "\n",
+    "    // Provide an implementation specific to the Integer Argument\n",
+    "    Console.WriteLine($\"The Float Argument is: {FloatArgument}\");\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now, from the *same Method*, we may now pass in each of the different Argument Types for which we provided an **Overload**. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The String Argument is: This is a String Argument\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Obviously, we may pass in a String Argument without incident\n",
+    "PrintArgument( \"This is a String Argument\" );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Integer Argument is: 19\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// We may now also provide Integer Arguments\n",
+    "PrintArgument( 19 );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Float Argument is: 3.14\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Additionally, may now also provide Float Arguments\n",
+    "PrintArgument( 3.14f );"
+   ]
   }
  ],
  "metadata": {
