modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -649,7 +649,9 @@
     "\n",
     "    }\n",
     "\n",
-    "    // Print the closing bracket of the array\n",
+    "    // After all that,\n",
+    "    // since it is now reasonable to assume that we have printed each Integer in Array,\n",
+    "    // print the closing bracket of the array\n",
     "    Console.Write(']');\n",
     "\n",
     "}  "
