modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 58,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 60,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 63,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -644,7 +644,9 @@
     "        // but also print a comma to delimit for the next Value,\n",
     "        // provided that the Current Index is NOT the Last.\n",
     "        Console.Write(\n",
-    "            $\"{ IntegerArrayParameter[ CurrrentIndex ] }{( (CurrrentIndex != LastIndex) ? \",\" : \"\" ) }\"\n",
+    "            $\"{ IntegerArrayParameter[ CurrrentIndex ] }\"\n",
+    "            +\n",
+    "            $\"{( (CurrrentIndex != LastIndex) ? \",\" : \"\" ) }\"\n",
     "        );\n",
     "\n",
     "    }\n",
@@ -659,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -716,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 66,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -793,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -812,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -905,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -962,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1069,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1145,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 72,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1218,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1303,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 74,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1419,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 75,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1466,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 76,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1596,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1672,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 78,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1730,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 79,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1790,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 80,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
