modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -899,7 +899,7 @@
     }
    },
    "source": [
-    "When a **Reference Type** variable is passed as a Method **Argument**, the **address** of *where the object actually exists in memory* copied into the **parameter** listed as part of the Method's declaration.   \n",
+    "When a **Reference Type** variable is passed as a Method **Argument**, the **address** of *where the object actually exists in memory* is copied into the **parameter** listed as part of the Method's declaration.   \n",
     "   \n",
     "After that, although what is being used within the Method's implementation is a copy,   \n",
     "It's a copy of an **address** which is *pointing to the same place* as the original:"
