modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -1066,7 +1066,7 @@
    "source": [
     "When a method is invoked, we can pass a whole **expression** instead of arguments.   \n",
     "   \n",
-    "By doing so, C# calculates the values for the **expression**, and by the time of code execution, replaces the **expression** with its result, when the method is invoked:"
+    "By doing so, C# calculates the values for the **expression**, and by the time of code execution, replaces the **expression** with its result when the Method is invoked:"
    ]
   },
   {
