modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -1142,7 +1142,7 @@
     }
    },
    "source": [
-    "We must know that we can pass only arguments that are of a **compatible type** with the related parameter, declared in the method’s parameters list"
+    "We must know that we can pass only arguments that are of a **compatible type** with the related parameter, declared in the method’s parameters list:"
    ]
   },
   {
