modified:   9. Methods/Declaration/Parameters.ipynb

--- a/9. Methods/Declaration/Parameters.ipynb
+++ b/9. Methods/Declaration/Parameters.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1028,6 +1028,112 @@
    "source": [
     "// Additionally, may now also provide Float Arguments\n",
     "PrintArgument( 3.14f );"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Unique Parameters are required for Overloading Methods"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "To properly **overload** Methods, it is important to observe that while any two **overloads** of the same Method may (and must) have the same **name** and **return type**, they must also have **different parameters**:   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(13,13): error CS0111: Type 'Submission#43' already defines a member called 'PrintArgument' with the same parameter types",
+     "output_type": "error",
+     "traceback": [
+      "(13,13): error CS0111: Type 'Submission#43' already defines a member called 'PrintArgument' with the same parameter types"
+     ]
+    }
+   ],
+   "source": [
+    "// Overload the Method so that it accepts a Character Argument\n",
+    "static void PrintArgument(char CharArgument) \n",
+    "{\n",
+    "\n",
+    "    // Provide an implementation specific to the Character Argument\n",
+    "    Console.WriteLine($\"The char Argument is: {CharArgument}\");\n",
+    "\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "// Attempt to Overload the Method such that it may receive Another Character Argument\n",
+    "static void PrintArgument(char AnotherCharArgument) \n",
+    "{\n",
+    "\n",
+    "    // Provide an implementation specific to the Character Argument\n",
+    "    Console.WriteLine($\"The char Argument is: {AnotherCharArgument}\");\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Above, invoking the `PrintArgument()` Method after including the additional overflow caused an error due to being provided with the *same parameter as the one which was previously declared*."
    ]
   }
  ],
