modified:   9. Methods/Declaration/Parameters.ipynb

--- a/9. Methods/Declaration/Parameters.ipynb
+++ b/9. Methods/Declaration/Parameters.ipynb
@@ -1057,7 +1057,7 @@
     }
    },
    "source": [
-    "#### Unique Parameters are required for Overloading Methods"
+    "#### Requirements for Overloading Methods"
    ]
   },
   {
@@ -1073,6 +1073,36 @@
    },
    "source": [
     "To properly **overload** Methods, it is important to observe that while any two **overloads** of the same Method may (and must) have the same **name** and **return type**, they must also have **different parameters**:   \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, invoking the `PrintArgument()` Method after including the additional overflow causes an error due to being provided with the *same parameter as the one which was previously declared*."
    ]
   },
   {
@@ -1119,21 +1149,6 @@
     "    Console.WriteLine($\"The char Argument is: {AnotherCharArgument}\");\n",
     "\n",
     "}"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "Above, invoking the `PrintArgument()` Method after including the additional overflow caused an error due to being provided with the *same parameter as the one which was previously declared*."
    ]
   }
  ],
