renamed:    9. Methods/Implementation.ipynb -> 9. Methods/Implementation/An Overview.ipynb new file:   9. Methods/Implementation/Returning a Result.ipynb modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Implementation/An Overview.ipynb
+++ b/9. Methods/Implementation/An Overview.ipynb
@@ -28,6 +28,7 @@
    },
    "source": [
     "## Implementation\n",
+    "### Overview\n",
     "___"
    ]
   },
@@ -367,6 +368,36 @@
     "If a variable is declared within a **block**, it is also called **local** (for this block).    \n",
     "Its area of *visibility* begins from the line where the variable is *declared*, and ends at the line where block’s *closing bracket* is."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Returning a Result from a Method"
+   ]
   }
  ],
  "metadata": {
@@ -435,6 +466,17 @@
      {
       "aliases": [],
       "name": "value"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
