modified:   9. Methods/Implementation/An Overview.ipynb

--- a/9. Methods/Implementation/An Overview.ipynb
+++ b/9. Methods/Implementation/An Overview.ipynb
@@ -223,8 +223,8 @@
     }
    ],
    "source": [
-    "// Observe that the  LocalViariableScopeExample  class's  Local String Variable  is NOT accessible outside it's scope...\n",
-    "\n",
+    "// Observe that the  LocalViariableScopeExample  class's  Local String Variable  \n",
+    "// is NOT accessible outside it's scope...\n",
     "LocalString"
    ]
   },
@@ -270,7 +270,6 @@
    ],
    "source": [
     "//...it is only accessible once INVOKED from an instance of it's parent class.\n",
-    "\n",
     "new LocalVariableScopeExample().LocalString"
    ]
   },
