modified:   9. Methods/Declaration/An Overview.ipynb modified:   9. Methods/Implementation/An Overview.ipynb modified:   9. Methods/Implementation/Returning a Result.ipynb

--- a/9. Methods/Declaration/An Overview.ipynb
+++ b/9. Methods/Declaration/An Overview.ipynb
@@ -61,7 +61,7 @@
    },
    "source": [
     "```c#\n",
-    "[access_modifier] return_type method_name ( [param_list] )\n",
+    "[access_modifier]  return_type  method_name( [param_list] )\n",
     "```"
    ]
   },
@@ -474,6 +474,7 @@
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
